# local-rag

./: .gitignore  README.md  makefile  package-lock.json  pyproject.toml  setup.cfg  tailwind.config.js
local_rag/: app.py  run.py
local_rag/app/: __init__.py  config.py  home.py
local_rag/app/chat/: routes.py
local_rag/app/models/: llm_model.py
local_rag/app/static/css/: main.css
local_rag/app/static/src/: input.css
local_rag/app/templates/: base.html  home.html
tests/: conftest.py  test_api.py
