
[metadata]
name = local-rag
version = attr: local_rag.__version__
description = local rag
long_description = file: README.md
keywords = RAG ollama langchain local AI
license = MIT
author = Sam Arbid
author_email = samarbid13@gmail.com
platforms = any
url = https://github.com/samk13/local-rag
classifiers =
    Development Status :: 1 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.11
zip_safe = False
install_requires =
    # Invenio core modules
    langchain>=0.1.12,<0.2.0
    Flask>=2.2.0,<2.3.0

[options.extras_require]
tests =
    isort>=5.13.2
    black>=24.3.0
    ruff>=0.3.3

[options.entry_points]
console_scripts =
    local_rag = local_rag.app:start


[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --doctest-modules --cov=local_rag --cov-report=term-missing
testpaths = tests local_rag
live_server_scope = module